support for multiple files

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-sourceFileLocation=C:\\ga\\
-destinationFileLocation=C:\\ga\\local_temp\\
-sourceFileName=sample_s.csv
-destinationFileName=sample_d.csv
+primarySourceLocation=C:\\ga\\sources\\primary_source\\
+primaryDestinationLocation=C:\\ga\\sources\\primary_destination\\
+secondarySourceLocation=C:\\ga\\sources\\secondary_source\\
+secondaryDestinationLocation=C:\\ga\\sources\\secondary_destination\\
+fileNames=sample1.csv,sample2.csv
+resultFileLocation=C:\\ga\\sources\\result\\
